--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,7 +1,19 @@
+
+
+.bgcor{
+    background:radial-gradient(rgb(73, 2, 73),rgb(27, 3, 27),rgb(13, 0, 31));
+}
+
+.bgcorBtn{
+    background:white;
+}
+
+
+
 header{
-    text-align: center;
-    font-size: 2em;
-    color: white;
-    padding: 2%;
-    background-color: darkviolet;
+    width: 30em;
+}
+
+nav div ul li a{
+color:white;
 }
