--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,6 +1,5 @@
-<footer id="contato" class="bg-primary text-white text-center text-lg-start">
+<footer id="contato" class=" text-white text-center text-lg-start">
  
-  <app-contato></app-contato>
 
 
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
