--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,42 +1,43 @@
-<header>
 
-    +Unidas
-</header>
 
-<nav class="navbar navbar-dark bg-dark">
-    
-    <form class="form-inline my-2 my-lg-0">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-light bgcor">
+
+  
+
+    <form class="form-inline my-2 m-auto my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    
-    <button class="ml-auto navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    </form>
+
+
+    <button class="navbar-toggler ml-auto bgcorBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon navbar-light"></span>
     </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item ">
+                <a class="nav-link active" routerLink="/inicio">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" routerLink="/cadastrar">Cadastrar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" routerLink="/entrar">Entrar</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" routerLink="/sobre-nos">Sobre-nos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="#contato" routerLink="">Contato</a>
+            </li>
+        </ul>
+
+
+    </div>
 </nav>
-
-
-<div class="collapse" id="navbarSupportedContent">
-    <nav class="navbar navbar-dark bg-success ">
-    <ul class="navbar-nav">
-       
-        <li class="nav-item ">
-            <a class="nav-link active" routerLink="/inicio">Inicio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" routerLink="/cadastrar">Cadastrar</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" routerLink="/login">Login</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" routerLink="/sobre-nos">Sobre-nos</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" href="#contato" routerLink="">Contato</a>
-        </li>
-       
-    </ul>
-    </nav>
-</div>
+<header>
+    <a class="navbar-brand "><img src="../../assets/imgs/logo.png" width="190" height="100" class="d-inline-block align-text-top"></a>
+</header>
+    
