--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -12,7 +12,9 @@ article{
         background-color: rgba(70, 3, 54, 0.589);
         font-size: 1.3em;
         border-radius: 3em;
+        width: 75%;
         margin: auto;
+        padding:2%;
      }
     
     
@@ -20,7 +22,12 @@ article{
      color:rgb(43, 8, 77);
      text-decoration: none;
  }
-    
+ 
+
+label{
+    margin-top: 2%;
+}
+
     input {
         margin: auto;
         display: block;
@@ -35,6 +42,7 @@ article{
     .btn{
         background-color: darkmagenta;
         color: white;
+        padding: 2.5% 6%;
     }
 
 
