--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -6,4 +6,15 @@ article{
 
 textarea{
     resize: none;
+
+}
+
+
+
+
+.inputPostagem{
+    border-radius: 20px;
+    height: 5em;
+    width: 100%;
+    border: 1px solid red;
 }
