--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -22,7 +22,7 @@
         </form>
 
         </section>
-        <section class="col-md-6 borda mt-4"><img src="../../assets/imgs/entrarRodando.gif" width="500" height="530" alt=""></section>
+        <section class="col-md-6 borda mt-4"><img src="../../assets/imgs/entrar.gif" width="500" height="530" alt=""></section>
 
 
     </section>
