--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -12,7 +12,7 @@
       <p class="lead">{{descricao}}</p>
 
 
-      </section>
+    </section>
 
 
 
@@ -21,8 +21,11 @@
     <section class="col-md-6 mt-3">
 
       <div class="text-left">
-      <input  class="text-center inputPostagem" name=""  data-toggle="modal" placeholder="Sua Postagem" data-target="#novaPostagem">
+        <input class="text-center inputPostagem" name="" data-toggle="modal" placeholder="Sua Postagem"
+          data-target="#novaPostagem">
       </div>
+
+
       <!-- POSTAGENS -->
 
       <article class="container-fluid mt-5" id="postagens">
@@ -33,7 +36,7 @@
               aria-controls="nav-TodasPostagens" aria-selected="true">Todas Postagens</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="MinhasPostagens-tab" data-toggle="tab" href="#MinhasPostagens" role="tab"
+            <a  (click)='findByUserId()' class="nav-link" id="MinhasPostagens-tab" data-toggle="tab" href="#MinhasPostagens" role="tab"
               aria-controls="MinhasPostagens" aria-selected="false">minhas Postagens</a>
           </li>
           <li class="nav-item">
@@ -42,41 +45,51 @@
           </li>
         </ul>
 
-
+        <!-- todas postagens -->
         <div class="tab-content" id="myTabContent">
           <div class="tab-pane fade show active" id="TodasPostagens" role="tabpanel"
-            aria-labelledby="TodasPostagens-tab">..agora sao
-            todas.</div>
+            aria-labelledby="TodasPostagens-tab">
+
+            <div class="card">
+         
+              <div *ngFor="let postagem of listaPostagem" class="card-body">
+                <h3 class="card-title">{{postagem.titulo}}</h3>
+                <p class="card-text lead">{{postagem.descricao}}</p>
+                  <img src={{postagem.anexo}} alt="">
+              </div>
+         
+            </div>
+
+          </div>
+          <!-- fim todas postagens -->
+
+          <!-- minhas postagens -->
           <div class="tab-pane fade show" id="MinhasPostagens" role="tabpanel"
-            aria-labelledby="nav-MinhasPostagens-tab">...minhas</div>
+            aria-labelledby="nav-MinhasPostagens-tab">
 
-          <div class="tab-pane fade" id="PostagemTema" role="tabpanel" aria-labelledby="PostagemTema-tab">Tema</div>
+
+            <div class="card text-center" *ngFor='let postagem of usuario.postagem | orderBy: key: reverse'>
+              <div class="card-body">
+                <h5 class="card-title m-0">{{postagem.titulo}}</h5>
+                <small class="text-muted"> Tema: {{postagem.tema.descricao}}</small>
+                <p class="card-text mt-3">{{postagem.descricao}}</p>
+                <p class="card-text"><small class="text-muted">
+                    {{postagem.data | date: 'dd/MM/yyyy'}} às {{postagem.data | date: 'HH:mm'}}
+                  </small></p>
+    
+                <a [routerLink]="['/postagem-edit', postagem.id]" class="text-info mr-3" href="">Editar</a>
+                <a [routerLink]="['/postagem-delete', postagem.id]" class="text-danger" href="">Apagar</a>
+    
+              </div>
+            </div>
+
+          </div>
+          <!-- fim minhas postagens -->
+
+
         </div>
-
-
       </article>
       <!-- FIM POSTAGENS -->
-
-
-
-      <h1>Feed:</h1>
-
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores sed id nesciunt tempore accusantium hic
-        consequuntur, corrupti inventore provident iure quae. Commodi facere ullam incidunt fugit corporis sit impedit
-        illo!</p>
-
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores sed id nesciunt tempore accusantium hic
-        consequuntur, corrupti inventore provident iure quae. Commodi facere ullam incidunt fugit corporis sit impedit
-        illo!</p>
-
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores sed id nesciunt tempore accusantium hic
-        consequuntur, corrupti inventore provident iure quae. Commodi facere ullam incidunt fugit corporis sit impedit
-        illo!</p>
-
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores sed id nesciunt tempore accusantium hic
-        consequuntur, corrupti inventore provident iure quae. Commodi facere ullam incidunt fugit corporis sit impedit
-        illo!</p>
-
 
     </section>
 
@@ -101,27 +114,32 @@
 
       <div class="modal-body">
 
-        <form class="form-group" action="">
+        <div class="form-group">
           <label for="titulo">Titulo</label>
-          <input type="text" id="titulo" class="form-control">
+          <input type="text" id="titulo" [(ngModel)]="postagem.titulo" class="form-control">
 
           <label for="descricao">Texto</label>
-          <textarea name="texto" id="descricao" rows="3" class="form-control"></textarea>
+          <textarea name="texto" id="descricao" [(ngModel)]="postagem.descricao" rows="3"
+            class="form-control"></textarea>
+
+          <label for="titulo">Link de imagem ou Video</label>
+          <input type="text" id="imagem" [(ngModel)]="postagem.anexo" class="form-control">
+
 
           <label for="texto">Escolha um tema ou </label><a routerLink="/tema" data-dismiss="modal">cadastre um tema</a>
-          <select name="tema" class="form-control mt-2" id="">
+          <select name="tema" [(ngModel)]="idTema" (change)="findByIdTema()" class="form-control mt-2" id="">
 
-            <option value="">Temas</option>
+            <option *ngFor="let tema of listaTemas | orderBy: key: reverse" value="{{tema.id}}">{{tema.nome}}</option>
 
           </select>
 
-        </form>
+        </div>
 
       </div>
 
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-success">Publicar</button>
+        <button type="button" class="btn btn-success" data-dismiss="modal" (click)="publicarPost()">Publicar</button>
       </div>
     </div>
   </div>
