--- a/src/app/delete/tema-delete/tema-delete.component.html
+++ b/src/app/delete/tema-delete/tema-delete.component.html
@@ -1,1 +1,27 @@
-<p>tema-delete works!</p>
+<div class="container">
+
+    <div class="row mt-5 mb-5">
+        <div class="col-md-6"> <img src="../../../assets/imgs/trashTema.jpg" width="500" alt="">
+        </div>
+       <div class="col-md-6">
+          <div class="card mt-5">
+  
+             <div class="card-body" >
+               <p class="card-text" aria-describedby="texto">{{tema.nome}} </p>
+               <p class="card-text" aria-describedby="texto">{{tema.descricao}} </p>
+             </div>
+          </div>
+  
+          <hr class="mt-4 mb-4">
+  
+          <h5 class="text-center">Tem certeza que deseja apagar esse Tema?</h5>
+          <div class="d-flex justify-content-center mt-5">
+             <button class="btn btn-outline-success mr-3" (click)="deletarTema()">Sim</button>
+             <button class="btn btn-outline-danger" routerLink="/tema" >Não</button>
+          </div>
+        </div>
+    </div>
+  </div>
+  
+  
+  
