--- a/src/app/edit/perfil-edit/perfil-edit.component.html
+++ b/src/app/edit/perfil-edit/perfil-edit.component.html
@@ -1,1 +1,49 @@
-<p>perfil-edit works!</p>
+<article class="container-fluid">
+
+    <section class="row d-flex justify-content-center">
+
+
+            <section class="col-md-8 text-center mt-4">
+                    <img src="../../assets/imgs/logoUnidas.png" width="250" height="170" alt="">
+
+                    <form class="text-monospace form-group" action="">
+                            <br>
+                            <h1 class="">Cadastro</h1>
+                            <label for="nome">Nome Completo:</label>
+                            <input class="form-control" type="text" [(ngModel)]="usuario.nome"
+                                    placeholder="Nome Completo" id="nome" name="nome">
+
+                            <label for="email">Email:</label>
+                            <input class="form-control" type="email" [(ngModel)]="usuario.usuario"
+                                    placeholder="Email" id="email" name="email">
+                            <label for="foto">Descricao:</label>
+                            <textarea class="form-control" type="email" cols="3" rows="4" [(ngModel)]="usuario.descricao"
+                                    placeholder="sobre Você" id="email" name="descricao"></textarea>
+
+                            <label for="foto">Link da Foto:</label>
+                            <input class="form-control" type="email" [(ngModel)]="usuario.foto"
+                                    placeholder="Link da foto" id="email" name="foto">
+
+                            <label for="senha">senha:</label>
+                            <input class="form-control" type="password" (input)="confirmeSenha($event)"
+                                    placeholder="Senha" id="senha" name="senha">
+
+                            <label for="confirmsenha">Confirmar Senha:</label>
+                            <input class="form-control" type="password" [(ngModel)]="usuario.senha"
+                                    placeholder="Confirmar Senha" id="confirmsenha" name="confirmsenha">
+
+
+                            <button class="btn btn-cad m-4 p-2" type="submit"
+                                    (click)="altUser()">Cadastrar</button>
+                            <a class="btn btn-cancel m-4 p-2" routerLink="/entrar">Cancelar</a>
+
+                    </form>
+            </section>
+
+
+    </section>
+
+
+
+
+</article>
