--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,5 +1,7 @@
 
 
+
+
 .bgcor{
     background:radial-gradient(rgb(73, 2, 73),rgb(27, 3, 27),rgb(13, 0, 31));
 }
@@ -11,7 +13,9 @@
 
 
 header{
-    width: 30em;
+    text-align: center;
+    background:linear-gradient(rgb(73, 2, 73),rgb(27, 3, 27),rgb(13, 0, 31));
+
 }
 
 nav div ul li a{
