--- a/src/app/sobre-nos/sobre-nos.component.css
+++ b/src/app/sobre-nos/sobre-nos.component.css
@@ -1,5 +1,5 @@
 article{
-    background:rgb(225, 236, 225);
+    background:rgb(255, 255, 255);
 }
 
 section{
@@ -13,6 +13,14 @@ border-radius: 20em;
 }
 
 
+
+.fa-linkedin-square:hover{
+    color: darkblue;
+}
+
+.fa-github-square{
+    color: rgb(51, 55, 56);
+}
 
 .fa-github-square:hover{
     color: black;
