--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -11,10 +11,13 @@ textarea{
 
 
 
-
 .inputPostagem{
-    border-radius: 20px;
-    height: 5em;
-    width: 100%;
-    border: 1px solid red;
+    background: rgba( 255, 255, 255, 0.2 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 2px );
+-webkit-backdrop-filter: blur( 2px );
+border-radius: 10px;
+height: 3em;
+width: 70%;
+border: 1px solid rgba(62, 13, 13, 0.18);
 }
