--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -3,7 +3,7 @@
   <section class="row">
 
 
-    <section class="col-md-3 perfil">
+    <section class="col-md-2 mt-5">
 
 
       <img src={{foto}} width="200" class="border rounded-circle" alt="">
@@ -18,9 +18,10 @@
 
 
 
-    <section class="col-md-6 mt-3">
+    <section class="col-md-6 mt-5 ml-5">
 
-      <div class="text-left">
+      <div class="">
+        <img src={{foto}} class="rounded-circle" width="50" alt="">
         <input class="text-center inputPostagem" name="" data-toggle="modal" placeholder="Sua Postagem"
           data-target="#novaPostagem">
       </div>
@@ -39,10 +40,6 @@
             <a  (click)='findByUserId()' class="nav-link" id="MinhasPostagens-tab" data-toggle="tab" href="#MinhasPostagens" role="tab"
               aria-controls="MinhasPostagens" aria-selected="false">minhas Postagens</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" id="PostagemTema-tab" data-toggle="tab" href="#PostagemTema" role="tab"
-              aria-controls="PostagemTema" aria-selected="false">Postagem por tema</a>
-          </li>
         </ul>
 
         <!-- todas postagens -->
@@ -50,12 +47,15 @@
           <div class="tab-pane fade show active" id="TodasPostagens" role="tabpanel"
             aria-labelledby="TodasPostagens-tab">
 
-            <div class="card">
+            <div *ngFor="let postagem of listaPostagem | orderBy: key: reverse" class="mt-4 card">
          
-              <div *ngFor="let postagem of listaPostagem" class="card-body">
+              <div  class="card-body">
                 <h3 class="card-title">{{postagem.titulo}}</h3>
-                <p class="card-text lead">{{postagem.descricao}}</p>
-                  <img src={{postagem.anexo}} alt="">
+                <p class="text-left"><small class="text-muted"><img src={{postagem.usuario.foto}} class="rounded-circle" width="30" alt="">{{postagem.usuario.nome}}</small></p>
+          
+                <p class="card-text"><small class="text-muted">{{postagem.data | date: 'dd/MM/yyyy'}} às {{postagem.data | date: 'HH:mm'}}</small></p>
+                  <img src={{postagem.anexo}} width="500" alt="">
+                  <p class="card-text lead">{{postagem.descricao}}</p>
               </div>
          
             </div>
@@ -68,15 +68,16 @@
             aria-labelledby="nav-MinhasPostagens-tab">
 
 
-            <div class="card text-center" *ngFor='let postagem of usuario.postagem | orderBy: key: reverse'>
-              <div class="card-body">
-                <h5 class="card-title m-0">{{postagem.titulo}}</h5>
-                <small class="text-muted"> Tema: {{postagem.tema.descricao}}</small>
-                <p class="card-text mt-3">{{postagem.descricao}}</p>
-                <p class="card-text"><small class="text-muted">
-                    {{postagem.data | date: 'dd/MM/yyyy'}} às {{postagem.data | date: 'HH:mm'}}
-                  </small></p>
-    
+            <div *ngFor="let postagem of usuario.postagem | orderBy: key: reverse" class="mt-4 card">
+         
+              <div  class="card-body">
+                <h3 class="card-title">{{postagem.titulo}}</h3>
+                <p class="text-left"><small class="text-muted"><img src={{usuario.foto}} width="50"class="rounded-circle" alt="">{{usuario.nome}}</small></p>
+          
+                <p class="card-text"><small class="text-muted">{{postagem.data | date: 'dd/MM/yyyy'}} às {{postagem.data | date: 'HH:mm'}}</small></p>
+                  <img src={{postagem.anexo}} width="500" alt="">
+                  <p class="card-text lead">{{usuario.nome}}</p>
+
                 <a [routerLink]="['/postagem-edit', postagem.id]" class="text-info mr-3" href="">Editar</a>
                 <a [routerLink]="['/postagem-delete', postagem.id]" class="text-danger" href="">Apagar</a>
     
@@ -122,11 +123,11 @@
           <textarea name="texto" id="descricao" [(ngModel)]="postagem.descricao" rows="3"
             class="form-control"></textarea>
 
-          <label for="titulo">Link de imagem ou Video</label>
+          <label for="titulo">Link da imagem</label>
           <input type="text" id="imagem" [(ngModel)]="postagem.anexo" class="form-control">
 
 
-          <label for="texto">Escolha um tema ou </label><a routerLink="/tema" data-dismiss="modal">cadastre um tema</a>
+          <label for="texto">Escolha um tema ou </label><a routerLink="/tema" data-dismiss="modal"> Cadastre um tema</a>
           <select name="tema" [(ngModel)]="idTema" (change)="findByIdTema()" class="form-control mt-2" id="">
 
             <option *ngFor="let tema of listaTemas | orderBy: key: reverse" value="{{tema.id}}">{{tema.nome}}</option>
