--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,30 +1,20 @@
-
+<header>
+<img src="../../assets/imgs/logoUnidas.png" width="100" height="72" alt="">
+</header>
 
 <nav id="navbar" class="navbar navbar-expand-lg navbar-light bgcor">
 
   
-
-    <form class="form-inline my-2 m-auto my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-
-
     <button class="navbar-toggler ml-auto bgcorBtn" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon navbar-light"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       
         <ul class="navbar-nav ml-auto">
             <li class="nav-item ">
                 <a class="nav-link active" routerLink="/inicio">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" routerLink="/cadastrar">Cadastrar</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" routerLink="/entrar">Entrar</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" routerLink="/sobre-nos">Sobre-nos</a>
@@ -34,10 +24,13 @@
             </li>
         </ul>
 
-
+        <ul class="navbar-nav ml-auto d-flex align-items-center text-white fs-16">
+            <li class="nav-item pl-3">
+                <a (click)="btnSair()" class="text-white" href="">Sair<i class="fa fa-sign-out" aria-hidden="true"></i>
+                </a>
+            </li>
+        </ul>
     </div>
 </nav>
-<header>
-    <a class="navbar-brand "><img src="../../assets/imgs/logo.png" width="190" height="100" class="d-inline-block align-text-top"></a>
-</header>
+
     
