--- a/src/app/delete/perfil-delete/perfil-delete.component.html
+++ b/src/app/delete/perfil-delete/perfil-delete.component.html
@@ -14,10 +14,10 @@
   
           <hr class="mt-4 mb-4">
   
-          <h5 class="text-center">Tem certeza que deseja apagar esse Tema?</h5>
+          <h5 class="text-center">Tem certeza que deseja apagar esse Usuario?</h5>
           <div class="d-flex justify-content-center mt-5">
              <button class="btn btn-outline-success mr-3" (click)="deletarUsuario()">Sim</button>
-             <button class="btn btn-outline-danger" routerLink="/tema" >Não</button>
+             <button class="btn btn-outline-danger" routerLink="/usuarios" >Não</button>
           </div>
         </div>
     </div>
