--- a/src/app/edit/tema-edit/tema-edit.component.html
+++ b/src/app/edit/tema-edit/tema-edit.component.html
@@ -5,7 +5,7 @@
     
     
               <h1>Temas</h1>
-              <p class="fs-30">veja aqui todos os temas cadastrados ou cadastre um novo:</p>
+              <p class="fs-30">Editar Tema:</p>
     
     
     
